[package]
name = "error_handling"
version = "0.1.0"
authors = ["Andrii Semkiv <semkiv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = 'abort' # set the behaviour in case of `panic` to not do stack unwinding and leave the cleaning to the OS for the release build
