[package]
name = "hello_macro"
version = "0.1.0"
authors = ["Andrii Semkiv <semkiv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `hello_macro_derive` could've been a dependency of `hello_macro` crate but making them independent allows for using only `hello_macro` if the functionality of `hello_macro_derive` is not needed
hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }
